Added Button Linked to Colors

--- a/containers.html
+++ b/containers.html
@@ -1,7 +1,7 @@
 <!doctype html>
 <html lang="en">
     <head>
-        <title>Title</title>
+        <title>Containers</title>
         <!-- Required meta tags -->
         <meta charset="utf-8" />
         <meta
@@ -74,6 +74,10 @@
                     <div class="custom-box">A</div>
                 </div>
             </div>
+        </div>
+
+        <div class="container my-4 d-flex justify-content-center">
+            <a href="colors.html" class="btn btn-info">Go to Colors</a>
         </div>
 
 
