Renamed Containers to Index

--- a/colors.html
+++ b/colors.html
@@ -102,7 +102,7 @@
 
         <div class="container my-4 p-3 shadow bg-light rounded-5">
             <a href="typography.html" class="btn btn-primary my-3 rounded-5"><b> Go to Typography</b> </a>
-            <a href="containers.html" class="btn btn-primary my-3 rounded-5"><b> Go to Containers</b> </a>
+            <a href="index.html" class="btn btn-primary my-3 rounded-5"><b> Go to Containers</b> </a>
 
 </div>
 
