Added IMG to a Folder

--- a/components.html
+++ b/components.html
@@ -67,7 +67,7 @@
                 <h2 class="text-center mb-4">About Me</h2>
                 <div class="row align-items-center">
                     <div class="col md-4">
-                        <img class="rounded-circle img-fluid border border-white border-4" src="http://itsaian.tech/img/laiya.png" alt="">
+                        <img class="rounded-circle img-fluid border border-white border-4" src="img/laiya.png" alt="">
 
                     </div>
                     <div class="col md-8">
@@ -111,7 +111,7 @@
             <div class="row">
                 <div class="col-md-4 my-3">
                     <div class="card h-100 d-flex flex-column" >
-                        <img class="card-img-top" src="http://itsaian.tech/img/laiya.png" alt="Card image cap">
+                        <img class="card-img-top" src="img/laiya.png" alt="Card image cap">
                         <div class="card-body">
                           <h5 class="card-title">Project 1</h5>
                           <p class="card-text">Some quick example text to build on the card title and make up the bulk of the card's content.</p>
@@ -123,7 +123,7 @@
                 <div class="col-md-4 my-3" >
 
                     <div class="card h-100 d-flex flex-column" >
-                        <img class="card-img-top" src="http://itsaian.tech/img/laiya.png" alt="Card image cap">
+                        <img class="card-img-top" src="img/laiya.png" alt="Card image cap">
                         <div class="card-body">
                           <h5 class="card-title">Project 2</h5>
                           <p class="card-text">Some quick example text to build on the card title and make up the bulk of the card's content.</p>
@@ -134,7 +134,7 @@
                 
                 <div class="col-md-4 my-3">
                     <div class="card h-100 d-flex flex-column" >
-                        <img class="card-img-top" src="http://itsaian.tech/img/laiya.png" alt="Card image cap">
+                        <img class="card-img-top" src="img/laiya.png" alt="Card image cap">
                         <div class="card-body">
                           <h5 class="card-title">Project 3</h5>
                           <p class="card-text">Some quick example text to build on the card title and make up the bulk of the card's content.</p>
