Fixed some buttons

--- a/components.html
+++ b/components.html
@@ -51,7 +51,7 @@
             <div class="container-fluid py-5 text-center ">
                 <h1 class="display-5 fw-bold">Hi! My name is Ian</h1>
                 <p class="col md-8 mx-auto fs-4" >This is a Description</p>
-                <a href="" class="btn btn-primary btn-lg">View my Work</a>
+                <a href="#projects" class="btn btn-primary btn-lg">View my Work</a>
             </div>
 
 
