--- a/form.html
+++ b/form.html
@@ -126,7 +126,7 @@
                 <div class="d-flex justify-content-center gap-3">
 
                     <button type="submit" class="btn btn-outline-primary w-25">Sign Up</button>
-                    <a href="register.html" class="btn btn-outline-danger w-25">Cancel</a>
+                    <a href="form.html" class="btn btn-outline-danger w-25">Cancel</a>
 
 
                 </div>
@@ -148,7 +148,7 @@
                 <div class="col-md-12">
                     <div class="mb-3">
                         <label for="username" class="form-label">Username</label>
-                        <input type="text" class="form-control" name="username" id="username"
+                        <input type="text" class="form-control is-valid" name="username" id="username"
                             placeholder="Please enter your username" required>
                         <div class="invalid-feedback">Please enter a valid usersname</div>
 
@@ -156,7 +156,7 @@
                 </div>
                 <div class="mb-3">
                     <label for="email" class="form-label">Email Address</label>
-                    <input type="email" class="form-control" name="email" id="email"
+                    <input type="email" class="form-control is-invalid" name="email" id="email"
                         placeholder="Please enter your email" required>
                 </div>
 
